--- a/manuscripts/24-jb-dags/24-jb-measurement-sample-restriction.tex
+++ b/manuscripts/24-jb-dags/24-jb-measurement-sample-restriction.tex
@@ -328,16 +328,14 @@ biological females or hysterectomy in biological males.
 
 In the cases we just considered, the scientific questions pertained to a
 sub-sample of the human population and so could be sensibly restricted
-(refer also to
-(\citeproc{ref-gachter2010WEIRD}{\textbf{gachter2010WEIRD?}});
-(\citeproc{ref-Machery2010WEIRD}{\textbf{Machery2010WEIRD?}})). However,
-even for questions that relate to all of humanity, sampling from all of
-humanity might be undesirable. For example, if we were interested in the
-effects of a vaccine on disease, sampling from one population might be
-as good as sampling from all. Sampling from one population might spare
-time and expense, which come with opportunity costs. We might conclude
-that sampling universally, where unnecessary, is wasteful and unethical.
-It would be worse than weird to do so.
+(refer also to Gaechter (\citeproc{ref-gachter2010}{2010}), Machery
+(\citeproc{ref-machery2010}{2010})). However, even for questions that
+relate to all of humanity, sampling from all of humanity might be
+undesirable. For example, if we were interested in the effects of a
+vaccine on disease, sampling from one population might be as good as
+sampling from all. Sampling from one population might spare time and
+expense, which come with opportunity costs. We might conclude that
+sampling universally, where unnecessary, is wasteful and unethical.
 
 We might agree with our mission statements in judging that ethical
 aspirations must guide research at every phase. More fundamentally, we
@@ -1947,6 +1945,12 @@ doi:\href{https://doi.org/10.1177/25152459221106366}{10.1177/25152459221106366}.
 Freeman, K (1948) \emph{Ancilla to the pre-socratic philosophers},
 Reprint edition, Cambridge, MA: Harvard University Press.
 
+\bibitem[\citeproctext]{ref-gachter2010}
+Gaechter, S (2010) (Dis)advantages of student subjects: What is your
+research question? \emph{Behavioral and Brain Sciences},
+\textbf{33}(2-3), 92--93.
+doi:\href{https://doi.org/10.1017/S0140525X10000099}{10.1017/S0140525X10000099}.
+
 \bibitem[\citeproctext]{ref-greenland2009commentary}
 Greenland, S (2009) Commentary: Interactions in epidemiology: Relevance,
 identification, and estimation. \emph{Epidemiology}, \textbf{20}(1),
@@ -2032,6 +2036,12 @@ Lüdecke, D, Ben-Shachar, MS, Patil, I, and Makowski, D (2020)
 Extracting, computing and exploring the parameters of statistical models
 using {R}. \emph{Journal of Open Source Software}, \textbf{5}(53), 2445.
 doi:\href{https://doi.org/10.21105/joss.02445}{10.21105/joss.02445}.
+
+\bibitem[\citeproctext]{ref-machery2010}
+Machery, E (2010) Explaining why experimental behavior varies across
+cultures: A missing step in "the weirdest people in the world?".
+\emph{Behavioral and Brain Sciences}, \textbf{33}(2-3), 101--102.
+doi:\href{https://doi.org/10.1017/S0140525X10000178}{10.1017/S0140525X10000178}.
 
 \bibitem[\citeproctext]{ref-malinsky2022semiparametric}
 Malinsky, D, Shpitser, I, and Tchetgen Tchetgen, EJ (2022)
